<resources>
    <string name="app_name">InventoryApp</string>

    <!-- names for main menu -->
    <string name="action_insert_dummy_data">Insert dummy data</string>
    <string name="action_delete_all_entries">Delete all flowers</string>

    <!-- names for editor menu -->
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>

    <!-- names for editor activity -->
    <string name="flower_name">Flower name</string>
    <string name="flower_name_hint">flower name</string>
    <string name="edit_price">Price</string>
    <string name="price_hint">price</string>
    <string name="edit_quantity">Quantity</string>
    <string name="quantity_hint">quantity</string>
    <string name="edit_supplier_name">Supplier name</string>
    <string name="name_of_supplier_hint">name of supplier</string>
    <string name="edit_supplier_phone_no">Supplier Phone No</string>
    <string name="supplier_phone_hint">supplier phone</string>
    <string name="editor_activity_title_add_flower">Add a flower</string>

    <string name="flower_name_added">Daisy</string>
    <string name="supplier_name_added">Elvila</string>
    <string name="supplier_phone_added">0745 234 345</string>
    <string name="display_table_contains">The inventory table contains</string>
    <string name="flowers">flowers</string>
    <string name="error_message_to_save">Error with saving flower</string>
    <string name="flower_saved">Flower saved with id</string>

    <string name="editor_activity_title_edit_flower">Edit flower</string>
    <string name="editor_activity_title_add_new_flower">Add a new flower</string>
    <string name="editor_insert_flower_failed">Error with saving flower</string>
    <string name="editor_insert_flower_successful">Flower saved</string>
    <string name="editor_update_flower_failed">Error with updating flower</string>
    <string name="editor_update_flower_successful">Flower updated</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete this flower?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="editor_delete_flower_successful">Flower deleted</string>
    <string name="editor_delete_flower_failed">Error with deleting flower</string>
    <string name="order_error_msg">You can\'t order this flower. There are no more in stock.</string>
    <string name="decrease_bttn_error_msg">Can\'t decrease quantity</string>
    <string name="sale_bttn_error_msg">Please choose another flower, there are no more in stock</string>
    <string name="sale_bttn">SALE</string>
    <string name="empty_text_view_msg">There are no flowers in database. To add one, please complete all the fields</string>
    <string name="product_price_err_msg">Please enter the product price!</string>
    <string name="product_name_err_msg">Please enter the product name!</string>
    <string name="product_quantity_err_msg">Please enter the product quantity!</string>
    <string name="product_supplierName_err_msg">Please enter the supplier name!</string>
    <string name="product_supplierPhone_err_msg">Please enter the supplier phone number!</string>
    <string name="phone_app_missing_err_msg">Phone app is not present on your device!</string>
</resources>
