<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/DimenWidthHeight.Padd.Orient"
    tools:context=".EditorActivity">

    <!-- Overview category -->
    <LinearLayout style="@style/EditorLinLay">
        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/flower_name" />
        <!-- Name field -->
        <EditText
            android:id="@+id/edit_flower_name"
            style="@style/EditorFieldStyle"
            android:hint="@string/flower_name_hint"
            android:inputType="textCapWords" />
    </LinearLayout>

    <LinearLayout style="@style/EditorLinLay">
        <!-- Label -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:textColor="@color/colorAccent"
            android:fontFamily="sans-serif-medium"
            android:textAppearance="?android:textAppearanceSmall"
            android:text="@string/edit_price" />
        <!-- Name field -->
        <EditText
            android:id="@+id/edit_price"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:hint="@string/price_hint"
            android:inputType="number" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="eur"/>
    </LinearLayout>

    <LinearLayout style="@style/EditorLinLay">
        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/edit_quantity" />

        <Button
            android:id="@+id/decrease_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="-"/>
        <!-- Name field -->
        <EditText
            android:id="@+id/edit_quantity"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:hint="@string/quantity_hint"
            android:inputType="number" />

        <Button
            android:id="@+id/increase_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+"/>
    </LinearLayout>

    <LinearLayout style="@style/EditorLinLay">
        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/edit_supplier_name" />
        <!-- Name field -->
        <EditText
            android:id="@+id/edit_supplier_name"
            style="@style/EditorFieldStyle"
            android:hint="@string/name_of_supplier_hint"
            android:inputType="textCapWords" />
    </LinearLayout>

    <LinearLayout style="@style/EditorLinLay">
        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/edit_supplier_phone_no" />
        <!-- Name field -->
        <EditText
            android:id="@+id/edit_supplier_phone"
            style="@style/EditorFieldStyle"
            android:hint="@string/supplier_phone_hint"
            android:inputType="phone" />
    </LinearLayout>

</LinearLayout>